Document the build.sbt and sbt plugins